Removal of MAC and PAC endpoints
Removing MAC and PAC endpoints as financial post endpoints support all
TAS components
